--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "blocksin-system": "^1.5.9",
+    "fabric": "^6.5.3",
+    "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.0"
+    "sebikostudio-icons": "^1.4.7"
   },
   "devDependencies": {
     "postcss": "^8",
