--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^6.2.0",
     "blocksin-system": "^1.5.9",
     "fabric": "^6.5.3",
+    "mongodb": "^6.12.0",
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
