--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.2.0",
     "blocksin-system": "^1.5.9",
+    "busboy": "^1.6.0",
+    "cloudinary": "^2.5.1",
     "fabric": "^6.5.3",
+    "formidable": "^3.5.2",
     "mongodb": "^6.12.0",
     "next": "15.1.0",
+    "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
