--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "blocksin-system": "^1.5.9",
     "busboy": "^1.6.0",
     "cloudinary": "^2.5.1",
+    "express": "^4.21.2",
     "fabric": "^6.5.3",
     "formidable": "^3.5.2",
     "mongodb": "^6.12.0",
@@ -30,6 +31,7 @@
     "sebikostudio-icons": "^1.4.7"
   },
   "devDependencies": {
+    "electron": "^33.3.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
