--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sebikostudio-icons": "^1.4.7"
   },
   "devDependencies": {
+    "electron": "^34.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
