--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.2.0",
+    "axios": "^1.7.9",
     "blocksin-system": "^1.5.9",
     "busboy": "^1.6.0",
     "cloudinary": "^2.5.1",
